postcss/testData/inspections/customMedia/mediaFeatureCustomIncorrect.pcss
@custom-media --my-media all;

@media (<error descr="Unknown media feature '--my-media'">--my-media</error> > 0px){}